[package]
name = "client"
description = "Minimalistic tcp client that sends messages to the server and prints the response"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
flume = { version = "0.11", default-features = false, features = ["async"] }
tokio = { version = "1", features = [ "rt", "macros", "net", "io-util" ] }
