[package]
name = "server"
description = "Auction house TCP server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "net", "io-util", "sync", "time" ] }
rusqlite = { version = "0.30.0", features = ["bundled"] }

[dev-dependencies]
parameterized = "1.1"
pretty_assertions = "1"
